Fix NPE: use `Collections.unmodifiableList()` instead